--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.11"
-replit = "^3.2.4"
 Flask = "^2.1.3"
+numpy = "^1.24.2"
 torch = {version = "=1.12.1+cpu", source = "pytorch"}
 torchvision = {version = "=0.13.1+cpu", source = "pytorch"}
 mmengine = "^0.7.3"
